--- a/pacific/index.html
+++ b/pacific/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="pacific.css">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
     </b></nav>
     <main>
         <h2>Enjoy Nature in Luxury</h2>
-        <p>Pacific Trails Resort offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
+        <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
         <ul>
             <li>Private yurts with decks overlooking the ocean</li>
             <li>Activities lodge with a fireplace and gift shop</li>
@@ -24,7 +25,7 @@
             <li>Heated outdoor pool and whirlpool</li>
             <li>Guided hiking tours of the redwoods</li>
         </ul>
-        <div>Pacific Trails Resort
+        <div id="contact"><span class="resort">Pacific Trails Resort</span>
             <br> 12010 Pacific Trails Road
             <br> Zephyr, CA 95555
             <br>
