Chapter 5 & 6 Case Study

--- a/ch6pacific/index.html
+++ b/ch6pacific/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
 </head>
-
-<body>
+<div id="wrapper">
     <h1>Pacific Trails Resort</h1>
     <nav>
         <a href="index.html">Home</a>&nbsp;
@@ -15,6 +14,7 @@
         <a href="activities.html">Activities</a>&nbsp;
         <a href="reservations.html">Reservations</a>&nbsp;
     </nav>
+    <div id="homehero"><img src="coasthero.jpg"></div>
     <main>
         <h2>Enjoy Nature in Luxury</h2>
         <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
@@ -37,6 +37,6 @@
             <br><a href="mailto:Kyle@Brandt.com">Kyle@Brandt.com</a>
         </footer>
     </main>
-</body>
+</div>
 
 </html>
