--- a/pacific/yurts.html
+++ b/pacific/yurts.html
@@ -6,15 +6,17 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
 </head>
-
-<body>
+<div id="wrapper">
     <h1>Pacific Trails Resort</h1>
-    <nav><b>
-        <a href="index.html">Home</a>&nbsp;
-        <a href="yurts.html">Yurts</a>&nbsp;
-        <a href="activities.html">Activities</a>&nbsp;
-        <a href="reservations.html">Reservations</a>&nbsp;
-    </b></nav>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="yurts.html">Yurts</a></li>
+            <li><a href="activities.html">Activities</a></li>
+            <li><a href="reservations.html">Reservations</a></li>
+        </ul>
+    </nav>
+    <div id="yurthero"><img src="yurthero.jpg"></div>
     <main>
         <h2>The Yurts at Pacific Trails</h2>
         <dl>
@@ -27,9 +29,10 @@
         </dl>
 
 
-        <footer><small><i>Copyright &copy; 2016 Pacific Trails Resort<br><a href="mailto:Kyle@Brandt.com">Kyle@Brandt.com</a>   
-            </i></small></footer>
+        <footer>Copyright &copy; 2016 Pacific Trails Resort
+            <br><a href="mailto:Kyle@Brandt.com">Kyle@Brandt.com</a>
+        </footer>
     </main>
-</body>
+</div>
 
 </html>
