--- a/activities.html
+++ b/activities.html
@@ -16,7 +16,8 @@
             <li><a href="reservations.html">Reservations</a></li>
         </ul>
     </nav>
-    <div id="trailhero"><img src="trailhero.jpg"></div>
+    <div id="trailhero">
+          </div>
     <main>
         <h2>Activities at Pacific Trails</h2>
         <h3>Hiking</h3>
