--- a/yurts.html
+++ b/yurts.html
@@ -6,15 +6,18 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="pacific.css">
 </head>
-
-<body>
+<div id="wrapper">
     <h1>Pacific Trails Resort</h1>
     <nav>
-        <a href="index.html">Home</a>&nbsp;
-        <a href="yurts.html">Yurts</a>&nbsp;
-        <a href="activities.html">Activities</a>&nbsp;
-        <a href="reservations.html">Reservations</a>&nbsp;
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="yurts.html">Yurts</a></li>
+            <li><a href="activities.html">Activities</a></li>
+            <li><a href="reservations.html">Reservations</a></li>
+        </ul>
     </nav>
+    <div id="yurthero">
+          </div>
     <main>
         <h2>The Yurts at Pacific Trails</h2>
         <dl>
@@ -31,6 +34,6 @@
             <br><a href="mailto:Kyle@Brandt.com">Kyle@Brandt.com</a>
         </footer>
     </main>
-</body>
+</div>
 
 </html>
