--- a/activities.html
+++ b/activities.html
@@ -4,7 +4,12 @@
 <head>
     <title>Pacific Trails Resort :: Activities</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="pacific.css">
+   <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="pacific.css" type="text/css">
+<!--[if lt IE 9]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
 </head>
 <div id="wrapper">
     <h1>Pacific Trails Resort</h1>
