--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="pacific.css">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <link rel="stylesheet" href="pacific.css" type="text/css">
+<!--[if lt IE 9]>
+<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
+
 </head>
 <div id="wrapper">
-    <h1>Pacific Trails Resort</h1>
+     <h1 id="content">Pacific Trails Resort</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
