Updated Case Study - Part 5

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <title>Pacific Trails Resort</title>
     <meta charset="utf-8">
+    <meta name="description" content="Pacific Trails Resort on the California North Coast, Yurts, Activites, Dining, Hiking, and much more!">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="pacific.css" type="text/css">
-<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
 </script>
 <![endif]-->
 
 </head>
 <div id="wrapper">
-     <h1 id="content">Pacific Trails Resort</h1>
+    <h1 id="content">Pacific Trails Resort</h1>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -26,6 +27,12 @@
     </div>
     <main>
         <h2>Enjoy Nature in Luxury</h2>
+        <video controls="controls" poster="media/pacifictrailsresort.jpg" width="320" height="240">
+            <source src="media/PacificTrailsResort.mp4" type="video/mp4">
+            <source src="media/PacificTrailsResort.ogv" type="video/ogv">
+            <source src="media/pacifictrailsresort.swf" type="video/ogv">
+            <a href="media/pacifictrailsresort.mov">Pacific Trails Resort</a> (.mov)
+        </video>
         <p><span class="resort">Pacific Trails Resort</span> offers a special lodging experience on the California North Coast. Relax in serenity with panoramic views of the Pacific Ocean.</p>
         <ul>
             <li>Private yurts with decks overlooking the ocean</li>
@@ -38,7 +45,8 @@
             <br> 12010 Pacific Trails Road
             <br> Zephyr, CA 95555
             <br>
-            <br> 888-555-5555
+            <br><a id="mobile" href="tel:888-555-5555">888-555-5555</a>
+            <span id="desktop">888-555-5555</span>
             <br>
             <br>
         </div>
