--- a/activities.html
+++ b/activities.html
@@ -4,9 +4,10 @@
 <head>
     <title>Pacific Trails Resort :: Activities</title>
     <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <meta name="description" content="Pacific Trails Resort on the California North Coast, Yurts, Activites, Dining, Hiking, and much more!">
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="pacific.css" type="text/css">
-<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js">
 </script>
 <![endif]-->
@@ -14,7 +15,7 @@
 <div id="wrapper">
     <h1>Pacific Trails Resort</h1>
     <nav>
-       <ul>
+        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="yurts.html">Yurts</a></li>
             <li><a href="activities.html">Activities</a></li>
@@ -22,7 +23,7 @@
         </ul>
     </nav>
     <div id="trailhero">
-          </div>
+    </div>
     <main>
         <h2>Activities at Pacific Trails</h2>
         <h3>Hiking</h3>
@@ -31,11 +32,39 @@
         <p>Ocean kayaks are available for guest use.</p>
         <h3>Bird Watching</h3>
         <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+        <div id="gallery">
+            <figure>
+                <img src="images/photo2.jpg" alt="Beach1" width="200" height="150">
+                <p>Sunset on the coast</p>
+            </figure>
+            <ul>
+                <li>
+                    <a href="images/photo3.jpg"><img src="images/photo3thumb.jpg" alt="Forest">
+                        <span><img src="images/photo3.jpg" width="200" height="150"
+                                       alt="Forest"><br>Forest</span></a>
+                </li>
+                <li>
+                    <a href="images/photo4.jpg"><img src="images/photo4thumb.jpg" alt="Beach">
+                        <span><img src="images/photo4.jpg" width="200" height="150"
+                                       alt="Beach"><br>Beach</span></a>
+                </li>
+                <li>
+                    <a href="images/photo5.jpg"><img src="images/photo5thumb.jpg" alt="Ocean">
+                        <span><img src="images/photo5.jpg" width="200" height="150"
+                                       alt="Ocean"><br>Ocean</span></a>
+                </li>
+                <li>
+                    <a href="images/photo6.jpg"><img src="images/photo6thumb.jpg" alt="Sunset">
+                        <span><img src="images/photo6.jpg" width="200" height="150"
+                                       alt="Sunset"><br>Sunset</span></a>
+                </li>
+            </ul>
+        </div>
 
         <footer>Copyright &copy; 2016 Pacific Trails Resort
             <br><a href="mailto:Kyle@Brandt.com">Kyle@Brandt.com</a>
         </footer>
     </main>
-    </div>
+</div>
 
 </html>
