--- a/yurts.html
+++ b/yurts.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>Pacific Trails Resort :: Yurts</title>
-    <meta charset="utf-8">
+    <meta charset="utf-8">\
+    <meta name="description" content="Pacific Trails Resort on the California North Coast, Yurts, Activites, Dining, Hiking, and much more!">
     <meta name="viewport" content="width=device-width initial-scale=1.0">
     <link rel="stylesheet" href="pacific.css" type="text/css">
     <!--[if lt IE 9]>
@@ -25,14 +26,13 @@
     </div>
     <main>
         <h2>The Yurts at Pacific Trails</h2>
-        <dl>
-            <dt><strong>What is a yurt?</strong></dt>
-            <dd>Our luxury yurts are permanent strusctures four feet off the ground. Each yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</dd>
-            <dt><strong>How are the yurts furnished?</strong></dt>
-            <dd>Each yurt is furnished with a queen-size bed with down quilt and gas-fired stove. The luxury camping experience also includes electricity and a sink with hot and cold running water. Shower and restroom facilities are located in the lodge.</dd>
-            <dt><strong>What should I bring?</strong></dt>
-            <dd>Bring a sense of adventure and some time to relax! Most guests also pack comfortable walking shoes and plan to dress for changing weather with layers of clothing.</dd>
-        </dl>
+            <h3>What is a yurt?</h3>
+            <p>Our luxury yurts are permanent strusctures four feet off the ground. Each yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</p>
+            <h3>How are the yurts furnished?</h3>
+            <p>Each yurt is furnished with a queen-size bed with down quilt and gas-fired stove. The luxury camping experience also includes electricity and a sink with hot and cold running water. Shower and restroom facilities are located in the lodge.</p>
+            <h3>What should I bring?</h3>
+            <p>Bring a sense of adventure and some time to relax! Most guests also pack comfortable walking shoes and plan to dress for changing weather with layers of clothing.</p>
+
         <h3>Yurt Packages</h3>
         <p>A variety of luxury yurt packages are available. Choose a package below and contact us to begin your reservation. We're happy to build a custom package just for you!
         </p>
